# play_motion_builder

./: README.md
.github/workflows/: industrial_ci_action.yml
play_motion_builder/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion_builder/include/play_motion_builder/: motion_model.h  motion_model.hpp
play_motion_builder/src/: motion_model.cpp  play_motion_builder.cpp  play_motion_builder.h  play_motion_builder.hpp  play_motion_builder_node.cpp
play_motion_builder/test/: test_motion_builder.cpp  test_motion_builder.test  test_motion_edit.yaml  test_motion_model.cpp  test_motion_model.test  test_motion_model.yaml  test_motion_new.yaml
play_motion_builder_js/example/: index.html  script.js  styles.css
play_motion_builder_js/src/: play_motion_builder.js
play_motion_builder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion_builder_msgs/action/: BuildMotion.action
play_motion_builder_msgs/msg/: Frame.msg  Meta.msg  Motion.msg
play_motion_builder_msgs/srv/: EditMotion.srv  StoreMotion.srv
ros_motion_builder/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_motion_builder/include/ros_motion_builder/: motion_model.h
ros_motion_builder/src/: motion_model.cpp  ros_motion_builder.cpp  ros_motion_builder.h  ros_motion_builder_node.cpp
ros_motion_builder/test/: test_motion_builder.cpp  test_motion_builder.test  test_motion_builder.yaml  test_motion_model.cpp  test_motion_model.test
ros_motion_builder_js/example/: index.html
ros_motion_builder_js/src/: ros_motion_builder.js
ros_motion_builder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_motion_builder_msgs/action/: BuildMotion.action  RunMotion.action
ros_motion_builder_msgs/msg/: Frame.msg  Meta.msg  Motion.msg
ros_motion_builder_msgs/srv/: ChangeJoints.srv  EditMotion.srv  ListJointGroups.srv  StoreMotion.srv
rqt_motion_builder/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_motion_builder/include/rqt_motion_builder/: properties_dialog.h  rqt_motion_builder.h
rqt_motion_builder/resources/: rqt_motion_builder.ui
rqt_motion_builder/scripts/: rqt_motion_builder
rqt_motion_builder/src/: properties_dialog.cpp  rqt_motion_builder.cpp
rqt_play_motion_builder/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_play_motion_builder/include/rqt_play_motion_builder/: properties_dialog.h  properties_dialog.hpp  rqt_play_motion_builder.h  rqt_play_motion_builder.hpp
rqt_play_motion_builder/resources/: properties_dialog.ui
rqt_play_motion_builder/scripts/: rqt_play_motion_builder
rqt_play_motion_builder/src/: properties_dialog.cpp  rqt_play_motion_builder.cpp
