<?xml version="1.0"?>
<package format="2">
  <name>play_motion_builder</name>
  <version>1.0.1</version>
  <description>The play_motion_builder package, a node to handle the creation of new motions for play_motion.</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>play_motion_builder_msgs</depend>
  <depend>play_motion_msgs</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
