<?xml version="1.0"?>
<package format="3">
  <name>play_motion_builder</name>
  <version>1.4.0</version>
  <description>The play_motion_builder package, a node to handle the creation of new motions for play_motion.</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>play_motion_builder_msgs</depend>
  <depend>play_motion2</depend>
  <depend>play_motion2_msgs</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>