<?xml version="1.0"?>
<package format="2">
  <name>play_motion_builder_msgs</name>
  <version>1.0.2</version>
  <description>The play_motion_builder_msgs package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  
  <export></export>
</package>
