<?xml version="1.0"?>
<package format="2">
  <name>ros_motion_builder</name>
  <version>1.0.0</version>
  <description>The ros_motion_builder package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>ros_motion_builder_msgs</depend>
  <depend>play_motion_msgs</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
