<?xml version="1.0"?>
<package format="2">
  <name>rqt_motion_builder</name>
  <version>0.0.0</version>
  <description>The rqt_motion_builder package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>ros_motion_builder</depend>
  <depend>ros_motion_builder_msgs</depend>

  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_cpp</exec_depend>

  <exec_depend>rqt_gui</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
