<?xml version="1.0"?>
<package format="2">
  <name>rqt_motion_builder</name>
  <version>1.0.0</version>
  <description>The rqt_motion_builder package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>ros_motion_builder_msgs</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>ros_motion_builder</depend>
  <depend>urdf</depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>ros_motion_builder_msgs</exec_depend>
  <exec_depend>play_motion_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
