<?xml version="1.0"?>
<package format="3">
  <name>rqt_play_motion_builder</name>
  <version>1.2.0</version>
  <description>The rqt_play_motion_builder package, a front-end interface for play_motion_builder</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>play_motion_builder</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>urdf</depend>

  <build_depend>class_loader</build_depend>
  <build_depend>play_motion_builder_msgs</build_depend>
  <build_depend>play_motion2_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>play_motion_builder_msgs</exec_depend>
  <exec_depend>play_motion2_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
